--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "1.6.8",
+    "iconsax-react": "0.0.8",
+    "path": "0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "6.22.3",
     "zustand": "4.5.2"
   },
   "devDependencies": {
